inference server now working on coco

--- a/Dockerfile_inf_server
+++ b/Dockerfile_inf_server
@@ -42,6 +42,7 @@ RUN conda clean --all \
 WORKDIR /mmdetection
 
 RUN wget https://download.openmmlab.com/mmdetection/v3.0/grounding_dino/groundingdino_swint_ogc_mmdet-822d7e9d.pth
+RUN wget https://download.openmmlab.com/mmdetection/v3.0/mm_grounding_dino/grounding_dino_swin-t_pretrain_obj365_goldg_grit9m_v3det/grounding_dino_swin-t_pretrain_obj365_goldg_grit9m_v3det_20231204_095047-b448804b.pth
 
 COPY inf_server/import_nltk.py .
 
